@@ -13,7 +13,6 @@ import java.text.NumberFormat;
 import java.text.ParsePosition;
 import java.util.Calendar;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.Locale;
 
 import kankan.wheel.widget.WheelView;
@@ -190,41 +189,21 @@ public class TiUIDateSpinner extends TiUIView
 	
 	private void setFontProperties()
 	{
-
-		String fontFamily = null;
 		Float fontSize = null;
-		String fontWeight = null;
 		Typeface typeface = null;
-		KrollDict d = proxy.getProperties();
-		if (d.containsKey(TiC.PROPERTY_FONT) && d.get(TiC.PROPERTY_FONT) instanceof HashMap) {
-			KrollDict font = d.getKrollDict(TiC.PROPERTY_FONT);
-			if (font.containsKey(TiC.PROPERTY_FONTSIZE)) {
-				String sFontSize = TiConvert.toString(font, TiC.PROPERTY_FONTSIZE);
-				fontSize = new Float(TiUIHelper.getSize(sFontSize));
-			}
-			if (font.containsKey(TiC.PROPERTY_FONTFAMILY)) {
-				fontFamily = TiConvert.toString(font, TiC.PROPERTY_FONTFAMILY);
-			}
-			if (font.containsKey(TiC.PROPERTY_FONTWEIGHT)) {
-				fontWeight = TiConvert.toString(font, TiC.PROPERTY_FONTWEIGHT);
-			}
+		String[] fontProperties = TiUIHelper.getFontProperties(proxy.getProperties());
+
+		if (fontProperties[TiUIHelper.FONT_SIZE_POSITION] != null) {
+			fontSize = Float.valueOf(TiUIHelper.getSize(fontProperties[TiUIHelper.FONT_SIZE_POSITION]));
 		}
-		if (d.containsKeyAndNotNull(TiC.PROPERTY_FONT_FAMILY)) {
-			fontFamily = TiConvert.toString(d, TiC.PROPERTY_FONT_FAMILY);
-		}
-		if (d.containsKeyAndNotNull(TiC.PROPERTY_FONT_SIZE)) {
-			String sFontSize = TiConvert.toString(d, TiC.PROPERTY_FONT_SIZE);
-			fontSize = new Float(TiUIHelper.getSize(sFontSize));
-		}
-		if (d.containsKeyAndNotNull(TiC.PROPERTY_FONT_WEIGHT)) {
-			fontWeight = TiConvert.toString(d, TiC.PROPERTY_FONT_WEIGHT);
-		}
-		if (fontFamily != null) {
-			typeface = TiUIHelper.toTypeface(fontFamily);
+
+		if (fontProperties[TiUIHelper.FONT_FAMILY_POSITION] != null) {
+			typeface = TiUIHelper.toTypeface(fontProperties[TiUIHelper.FONT_FAMILY_POSITION]);
 		}
 		Integer typefaceWeight = null;
-		if (fontWeight != null) {
-			typefaceWeight = new Integer(TiUIHelper.toTypefaceStyle(fontWeight, null));
+		if (fontProperties[TiUIHelper.FONT_WEIGHT_POSITION] != null) {
+			typefaceWeight = Integer.valueOf(TiUIHelper.toTypefaceStyle(fontProperties[TiUIHelper.FONT_WEIGHT_POSITION],
+				fontProperties[TiUIHelper.FONT_SIZE_POSITION]));
 		}
 
 		if (typeface != null) {
